# oop

./: .gitignore  README.md
lab1_c/: check.c  check.h  error.c  error.h  io.c  io.h  java_properties.c  java_properties.h  main.c
lab1_cpp/: CMakeLists.txt  check.cpp  check.h  cut.cpp  cut.h  io.cpp  io.h  java_properties.cpp  java_properties.h  main.cpp
lab2/: forecast.cpp  forecast.h  forecast_collection.cpp  forecast_collection.h
lab3/: BaseEmployee.h  CMakeLists.txt  Company.cpp  Company.h  Department.cpp  Department.h  Dialog.cpp  Dialog.h  Employee.cpp  Employee.h  IEmployee.h  Manager.cpp  Manager.h  company.yaml  io.cpp  io.h  main.cpp  par_and_seq.cpp  serialization_helpers.cpp  serialization_helpers.h  unordered_map.h
